tests/auto/qml/qmllint/data/returnTypeAnnotation_component.qml
@@ -1,0 +1,9 @@
+import QtQml
+import QtQuick
+
+QtObject {
+    id: root
+    component Comp : Item { }
+    property Comp c: Comp{ }
+    function comp() { return root.c }
+}
