tests/auto/qml/qmllint/data/returnTypeAnnotation_property.qml
@@ -1,0 +1,7 @@
+import QtQml
+
+QtObject {
+    id: root
+    property int i: 1
+    function prop() { return root.i }
+}
