tests/auto/qml/qmllint/data/returnTypeAnnotation_type.qml
@@ -1,0 +1,5 @@
+import QtQml
+
+QtObject {
+    function type() { return 1 + 1 }
+}
